--- a/schedule.html
+++ b/schedule.html
@@ -508,8 +508,8 @@ in Excel and InsightMaker</a></td>
 <tr class="even">
 <td align="left"></td>
 <td align="left">2/22/2023</td>
-<td align="left">LECTURE: <a href="LECTURE7.html">Matrix population
-models</a></td>
+<td align="left">LECTURE: <a href="LECTURE6.html">Age-structured
+populations</a></td>
 <td align="left">Gotelli Chapter 3</td>
 <td align="left"><a href="FINAL_PROJECTS.html">Get in project
 groups</a></td>
