--- a/schedule.html
+++ b/schedule.html
@@ -527,15 +527,15 @@ R and InsightMaker</a></td>
 <td align="left">2/27/2023</td>
 <td align="left">LECTURE: <a href="LECTURE7.html">Matrix population
 models</a></td>
-<td align="left"><a href="heppell1.pdf">Heppell 1998</a></td>
+<td align="left"><a href="heppell1.pdf">Heppell 1998</a> (Optional)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/1/2023</td>
-<td align="left">LECTURE: <a href="LECTURE8.html">Stochasticity and
-uncertainty</a></td>
-<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
+<td align="left">LECTURE: <a href="LECTURE7.html">Matrix population
+models</a></td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
@@ -551,7 +551,7 @@ groups: PVA proposals</a></td>
 <td align="left">3/6/2023</td>
 <td align="left">LECTURE: <a href="LECTURE8.html">Stochasticity and
 uncertainty</a></td>
-<td align="left"></td>
+<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
