--- a/EXTRA_CREDIT.html
+++ b/EXTRA_CREDIT.html
@@ -461,8 +461,8 @@ div.tocify {
 </div>
 
 
-<p>You may submit up to three extra credit essays – one or two for each
-of the options listed below…</p>
+<p>You may submit up to two extra credit essays – one for each of the
+options listed below…</p>
 <div id="extra-credit-option-1-journal-article-response"
 class="section level2">
 <h2>Extra Credit Option 1 – Journal Article Response</h2>
