--- a/FINAL_PROJECTS.html
+++ b/FINAL_PROJECTS.html
@@ -620,6 +620,12 @@ model (e.g., InsightMaker link or R code).</p>
 Please be as concise as possible while still covering all the key
 elements in the grading rubric. You can use any standard format for your
 references (e.g., APA), all we ask is that you be consistent!</p>
+<div id="title" class="section level3">
+<h3>Title</h3>
+<p>A good title should be informative, should have the species name and
+should at least hint at what the research question is and its relevance
+to conservation/management.</p>
+</div>
 <div id="introduction" class="section level3">
 <h3>Introduction</h3>
 <p>This is where you introduce the topic and describe why it’s
@@ -629,16 +635,38 @@ paragraph of your introduction). You can recycle and flesh out the
 material from your proposal! This should be at least 3 paragraphs
 long.</p>
 <p>Remember to cite literature here (and use a consistent format)!</p>
+<p>The first paragraph(s) of the introduction should provide a clear
+motivation for your research questions. Once we read your research
+questions it should make total sense why you are asking these
+questions!</p>
+<p>The last sentences of your introduction should state your testable
+research question(s).</p>
+<p>Please try to cite at least 3-5 references in your introduction. For
+intro and all sections: every time you cite a paper/website/report, use
+the in-text citation format where you include the last name of the first
+author and the year of the publication.</p>
 </div>
 <div id="methods" class="section level3">
 <h3>Methods</h3>
 <p>This is where you describe your PVA in enough detail that it
 <em>could be replicated</em> by another wildlife researcher! You can
 recycle much of your “initial PVA” assignment here.</p>
-<p>Remember to justify all your decisions in terms of
-parameterization.</p>
-<p>Also, you should describe how you addressed the research questions
-you introduced in the introduction section (above)</p>
+<p>Remember to justify all your decisions. Every parameter value you use
+(survival rates, abundance, birth rate, carrying capacity, etc.) and
+every factual statement you make needs to have a citation. It needs to
+be clear where every single number in your model came from. You also
+need to justify the time frame for your model- you should not just use a
+20-year simulation time frame just because it is the default for
+InsightMaker (and if you do use a 20-year time frame you need to be very
+specific about why- otherwise I’ll assume you simply did not change the
+default!).</p>
+<p>Unlike the “initial PVA” assigment, this time you need to use
+complete sentences- no bulleted lists please! Also, try to avoid using
+InsightMaker jargon (RandPoisson, stocks, flows, links, ghost primitive,
+etc.). Instead, try to describe your model using “plain English”.</p>
+<p>The methods section should detail more than just how you put your
+model together- it should also detail how you used the model to test
+your research questions.</p>
 <ul>
 <li><p>What different scenarios did you run?</p></li>
 <li><p>How did you use the simulation results to address your
@@ -649,6 +677,23 @@ questions?</p>
 <li>Did you perform any statistical analyses?</li>
 </ul></li>
 </ul>
+<p>In general, try to avoid including figures and tables reproduced from
+other studies. Just describe the key results in words and refer to the
+original source. Including these figures in your paper implies you
+created the figure!</p>
+<p>You need to define what you mean by ‘viability’, since there is no
+standard definition. If you are assessing minimum viable population size
+(MVP), you need to define your viability criterion- for example, ‘we
+considered populations with extinction risk less than 5% over 50 years
+to be viable’.</p>
+<p>Try to avoid using acronyms like PVA and MVP without first defining
+what stand for.</p>
+<p>Most of you will use female-only models- and if so you should state
+this explicitly.</p>
+<p>For both the methods and results, use the past tense- you are
+describing what you did, not what you will do.</p>
+<p>Please include a link to your InsightMaker model in your Methods
+section. If you used R, please provide your R code as an appendix.</p>
 </div>
 <div id="results" class="section level3">
 <h3>Results</h3>
@@ -660,6 +705,18 @@ below the figure.</p>
 <p>With PVA it can be difficult to decide what to present and what not
 to present. Always ask yourself: is it <em>relevant</em> to your main
 questions?</p>
+<p>All figures need figure numbers and captions. Figure captions can be
+several sentences long and should have enough detail so that a reader
+can understand the figure without referring to the main text. All figure
+captions should include the name of the species being studied, should
+describe what axes represent and describe any symbols that are used.
+Figure captions should also describe where the data come from (in most
+cases, a population simulation model!).</p>
+<p>If you want to include a table from insightmaker, please import your
+insightmaker table results to excel so you can format nicely (rather
+than presenting a screenshot of an insightmaker table). Also try to
+avoid fractional individuals in your tables Don’t be constrained to
+insightmaker’s figures!</p>
 </div>
 <div id="discussion" class="section level3">
 <h3>Discussion</h3>
@@ -674,6 +731,12 @@ this in the future</li>
 <li>Describe any future research that could be helpful in addressing
 your main questions</li>
 </ul>
+<p>Limit your discussion of ‘flaws’ in your study to a single paragraph.
+And don’t start your discussion section with the ‘flaws’ paragraph.
+Start it instead with a summary of the important results and why/how
+those results are important for conservation and management.</p>
+<p>Let me know if you have any questions or would like to go over
+anything before your final submission.</p>
 <p>A rubric for the final written presentation can be found <a
 href="WrittenProject_rubric.docx">here</a>.</p>
 </div>
@@ -710,7 +773,7 @@ that you found. Please make your comments as specific and constructive
 as possible. The goal is to give your classmates feedback that will be
 useful to them as they prepare their final drafts! <em>Please hand in
 your peer-review to the group that wrote the draft AND your
-instuctor/TA</em> (submit/share via WebCampus)</p></li>
+instructor/TA</em> (submit/share via WebCampus)</p></li>
 <li><p>After that, we will break up into new groups. One representative
 from each peer-review group will meet with the project group that wrote
 the draft manuscript, to give feedback in person.</p></li>
@@ -826,6 +889,9 @@ project but who are not listed as a co-author.</li>
 <h2>Potentially useful links!</h2>
 <p>Publicly available datasets, potentially for final project…<br />
 (many links courtesy Tom Langen)</p>
+<p><a href="https://scholar.google.com/">Google Scholar</a> and Web of
+Science (access through UNR library services) will likely be your
+primary tools for finding papers!</p>
 <div id="biodiversity-data-clearinghouses-archives"
 class="section level3">
 <h3>BIODIVERSITY DATA CLEARINGHOUSES /ARCHIVES</h3>
