--- a/schedule.html
+++ b/schedule.html
@@ -549,16 +549,17 @@ groups: PVA proposals</a></td>
 <tr class="odd">
 <td align="left">Week 7</td>
 <td align="left">3/6/2023</td>
-<td align="left">LECTURE: <a href="LECTURE8.html">Stochasticity and
-uncertainty</a></td>
-<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
+<td align="left">LECTURE: <a href="LECTURE7.html">Matrix population
+models</a></td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/8/2023</td>
-<td align="left">TBD</td>
-<td align="left"></td>
+<td align="left">LECTURE: <a href="LECTURE8.html">Stochasticity and
+uncertainty</a></td>
+<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
