--- a/LECTURE7.html
+++ b/LECTURE7.html
@@ -989,6 +989,9 @@ from LJ to LJ)<br />
 <p><strong>PointSolutions</strong>: Which of the four management
 recommendations would have the greatest positive effect on this
 population?</p>
+<p>Click this link to download a CSV file of the loggerhead transition
+matrix (for reading into R): <a href="LoggerheadMatrix.csv">CSV
+link</a></p>
 </div>
 <div
 id="translate-life-history-description-into-matrix-population-model"
